# SecureStore

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/auth/: mod.rs
backend/src/encryption/: mod.rs
backend/src/file_handler/: mod.rs
backend/src/storage/: mod.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTAINERIZATION.md  CONTRIBUTING.md  DATA_PROTECTION.md  ENCRYPTION.md  FAQ.md  LICENSE  PHASE2.md  RELEASE.md  SECURITY.md  USAGE.md  WHAT_IS_SECURESTORE.md
frontend/: App.tsx  types.ts
frontend/components/: AuthBackButton.tsx  FileEntry.tsx  Logo.tsx  NoteEntry.tsx  OnboardingFlow.tsx  PasswordEntry.tsx  PasswordGeneratorPanel.tsx  PremiumFeaturesModal.tsx  SecurityInsightsPanel.tsx  Sidebar.tsx  TopNav.tsx  VaultDashboard.tsx  VaultLockScreen.tsx
frontend/hooks/: useAutoLock.ts  useClipboardWatcher.test.ts  useClipboardWatcher.ts
frontend/pages/: Account.tsx  Dashboard.tsx  Docs.tsx  Lock.tsx  Login.tsx  Settings.tsx  SignUp.tsx  Vault.tsx
frontend/services/: auth.ts  desktop.ts  encryption.ts  passwordPolicy.ts  storage.ts  vaultIntelligence.ts
scripts/: dev-port-utils.mjs  start-vite.mjs  tauri-dev.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+2 files in other folders)
