[package]
name = "secure_vault_backend"
version = "1.0.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
argon2 = "0.5.3"
base64 = "0.22.1"
bcrypt = "0.16.0"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sha1 = "0.10.6"
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
zeroize = "1.8.1"
