[package]
name = "securestore-app"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
secure_vault_backend = { path = "../backend" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2.1.1", features = [] }
